# simulator-mcp

./: .gitignore  ARCHITECTURE.md  INSTALL.md  README.md  pyproject.toml
proxy-dylib/: libproxy_inject.dylib  proxy_inject.m
src/simulator_mcp/: __init__.py  __main__.py  server.py
src/simulator_mcp/proxy/: mock_engine.py  network_log.py  proxy_server.py
src/simulator_mcp/simulator/: idb_client.py  simctl.py
src/simulator_mcp/tools/: device.py  network.py  screenshot.py  ui.py
tests/: test_device.py  test_mock_engine.py  test_network_log.py  test_network_tools.py  test_proxy_server.py
